--- a/watch_service/package.json
+++ b/watch_service/package.json
@@ -16,7 +16,8 @@
     "prisma": "^5.15.1"
   },
   "dependencies": {
-    "aws-sdk": "^2.1644.0",
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@prisma/client": "^5.15.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
