--- a/upload_service/package.json
+++ b/upload_service/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1643.0",
+    "@aws-sdk/client-s3": "^3.600.0",
     "express": "^4.19.2"
   }
 }
