--- a/upload_service/package.json
+++ b/upload_service/package.json
@@ -11,6 +11,10 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
+    "@prisma/client": "^5.15.1",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.1"
   }
 }
